basic paracelsin compat

--- a/locale/en/gold.cfg
+++ b/locale/en/gold.cfg
@@ -47,6 +47,8 @@ trace-metals-from-copper=Trace metal extraction from copper ore
 holmium-wire=Electrolytic wire
 holmium-microchip=Electrolytic microchip
 
+integrated-circuits-from-nitric-acid=Integrated circuits from nitric acid
+
 [fluid-name]
 nitric-acid=Nitric acid
 depleted-acid=Depleted acid
